# journal-app

./: .gitignore  README.md  TODO.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 18c2cac3af44_initial_schema.py  72414afdce8a_initial_schema.py
backend/src/journal_app/: db.py  main.py  models.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/public/: index.html
web/src/: App.tsx  index.css  main.tsx
web/src/commands/: index.ts
web/src/editor/: CodeMirrorCommandOrchestrator.ts  CodeMirrorEditor.tsx  CodeMirrorTextApi.ts  MarkdownEditor.css  MarkdownEditor.tsx  MarkdownPreview.css  MarkdownPreview.tsx  codemirrorMath.ts  codemirrorSetup.ts  index.ts
web/src/store/: index.ts
