[project]
name = "journal_app"               # ← must match import name
version = "0.1.0"
description = "Long-form posts → books service"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[all]>=0.115.12",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]

[tool.setuptools]                  # --- src-layout wiring ------------
package-dir = {"" = "src"}         # root → backend/src
packages = ["journal_app"]         # or use setuptools.find-namespaces()

[build-system]                     # --- switch backend ---------------
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
